--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
-sources:
+removed_sources:
   libssh-0.8.5.tar.xz: b5564774f986e396a7288a593595455bf10d9ce8
+sources:
+  libssh-0.8.6.tar.xz: 2cb2775dcf2780520421a669eebfe5862ba51d29
